# football-rustbot

./: .gitignore  Cargo.toml  Dockerfile  README.md
cf/power-rankings/: main.py  requirements.txt
cf/recent-activity/: main.py  requirements.txt
cf/update-projections/: main.py  requirements.txt  week_template.html
cf/update-sleeper/: main.py  requirements.txt
src/: lib.rs  main.rs
src/discord_client/: mod.rs
src/fantasy_client/: espn.rs  mod.rs  sleeper.rs
