[package]
name = "football-rustbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
http = "0.2.4"
phf = { version = "0.10", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
log = "0.4"
regex = "1"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
version = "0.10"